--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-loader": "^13.7.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,6 +46,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "jquery": "^3.3.1",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
