--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "mavon-editor": "^2.6.3",
+    "prettier": "~1.12.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.7.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "jquery": "^3.2.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
