--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "jquery": "^3.2.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mavon-editor": "^2.6.3",
+    "mongoose": "^5.1.3",
     "prettier": "~1.12.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.7.1",
@@ -67,7 +69,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
