--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "i": "^0.3.6",
     "jquery": "^3.2.1",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mavon-editor": "^2.6.3",
