--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "fs": "^0.0.1-security",
+    "fs.promised": "^3.0.0",
     "i": "^0.3.6",
     "jquery": "^3.2.1",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
+    "koa-compose": "^4.1.0",
+    "koa-route": "^3.2.0",
     "koa-router": "^7.4.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
