--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less-loader": "^4.1.0",
     "mavon-editor": "^2.6.3",
     "mongoose": "^5.1.3",
+    "monk": "^6.0.6",
     "prettier": "~1.12.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.7.1",
